2.GKE/GKE_Networking/demo_labs/hello-allow-from-foo.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: hello-allow-from-foo
spec:
  policyTypes:
    - Ingress
  podSelector:
    matchLabels:
      app: hello
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: foo
